z-index fixed navbar for variables.less

--- a/voteweb/voteweb/Content/bootstrap/variables.less
+++ b/voteweb/voteweb/Content/bootstrap/variables.less
@@ -264,7 +264,7 @@
 @zindex-dropdown:          1000;
 @zindex-popover:           1060;
 @zindex-tooltip:           1070;
-@zindex-navbar-fixed:      1030;
+@zindex-navbar-fixed:      11102;//1030;
 @zindex-modal:             1040;
 
 
