--- a/voteweb/voteweb/Content/countdown/countdown.css
+++ b/voteweb/voteweb/Content/countdown/countdown.css
@@ -2,6 +2,12 @@
 .bgssx {
     background-image: url(telaviv.jpg);
 }
+.text-title{
+    color: #fff;
+    font-size: 30px;
+    font-weight: bold;
+   text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
+}
 
 .countdown-container {
 }
@@ -73,7 +79,7 @@
 
 @media (max-width: 767px) {
     .clock-item {
-        margin: 0px 5px 5px 0px;
+        margin: 0px 5px 0px 5px;
         width: 100px;padding:5px;
     }
 
